--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@google-cloud/pubsub": "^4.0.7",
     "@japa/runner": "^3.1.0",
     "@poppinss/dev-utils": "^2.0.3",
+    "apitoolkit-js": "^2.0.1",
     "async_hooks": "^1.0.0",
     "axios": "^1.6.2",
     "copyfiles": "^2.4.1",
