--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
     "lint": "eslint . --ext=.ts",
-    "test": "node -r @adonisjs/require-ts/build/register bin/test.ts",
+    "test": "npx ts-node bin/test.ts",
     "clean": "del-cli build",
     "compile": "npm run clean && tsc && npm run copy:files",
     "copy:files": "copyfiles \"templates/**/*.txt\" build && npm run copy:instructions_md",
@@ -28,8 +28,10 @@
     "@adonisjs/core": "^5.1.0",
     "@adonisjs/mrm-preset": "^5.0.3",
     "@adonisjs/require-ts": "^2.0.13",
+    "@types/jest": "^29.5.11",
     "@types/jsonpath": "^0.2.4",
     "@types/node": "^20.10.4",
+    "@types/supertest": "^2.0.16",
     "@types/sync-fetch": "^0.4.3",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
@@ -67,13 +69,18 @@
   },
   "dependencies": {
     "@google-cloud/pubsub": "^4.0.7",
-    "@japa/runner": "^3.1.0",
+    "@japa/assert": "^2.1.0",
+    "@japa/runner": "^3.1.1",
+    "@japa/spec-reporter": "^1.3.3",
     "@poppinss/dev-utils": "^2.0.3",
     "apitoolkit-js": "^2.0.1",
     "async_hooks": "^1.0.0",
     "axios": "^1.6.2",
     "copyfiles": "^2.4.1",
+    "jest": "^29.7.0",
     "jsonpath": "^1.1.1",
+    "reflect-metadata": "^0.2.1",
+    "supertest": "^6.3.3",
     "sync-fetch": "^0.5.2",
     "uuid": "^9.0.1"
   }
