--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "apitoolkit-adonis",
-  "version": "2.2.0",
+  "name": "apitoolkit-adonis-v6",
+  "version": "1.0.0",
   "description": "APIToolkit SDK for adonisjs",
   "main": "build/providers/APIToolkitProvider.js",
+  "type": "module",
   "scripts": {
-    "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
     "lint": "eslint . --ext=.ts",
-    "test": "npx ts-node bin/test.ts",
+    "test": "node --import=./tsnode.esm.js --enable-source-maps bin/test.ts",
     "clean": "del-cli build",
     "compile": "npm run clean && tsc && npm run copy:files",
-    "copy:files": "copyfiles \"templates/**/*.txt\" build && npm run copy:instructions_md",
+    "copy:files": "copyfiles \"stubs/**/*.stub\" build && npm run copy:instructions_md",
     "copy:instructions_md": "copyfiles \"instructions.md\" build",
     "build": "npm run compile",
     "prepublishOnly": "npm run build"
@@ -21,13 +21,20 @@
   },
   "author": "",
   "license": "MIT",
+  "eslintConfig": {
+    "extends": "@adonisjs/eslint-config/package"
+  },
+  "prettier": "@adonisjs/prettier-config",
   "peerDependencies": {
-    "@adonisjs/core": "^5.1.0"
+    "@adonisjs/core": "^6.9.0"
   },
   "devDependencies": {
-    "@adonisjs/core": "^5.1.0",
-    "@adonisjs/mrm-preset": "^5.0.3",
+    "@adonisjs/core": "^6.9.0",
+    "@adonisjs/eslint-config": "^1.3.0",
+    "@adonisjs/prettier-config": "^1.3.0",
     "@adonisjs/require-ts": "^2.0.13",
+    "@adonisjs/tsconfig": "^1.3.0",
+    "@swc/core": "^1.5.7",
     "@types/jest": "^29.5.11",
     "@types/jsonpath": "^0.2.4",
     "@types/node": "^20.10.4",
@@ -39,14 +46,8 @@
     "del-cli": "^5.1.0",
     "eslint": "^8.55.0",
     "mrm": "^4.1.22",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
-  },
-  "mrmConfig": {
-    "core": false,
-    "license": "MIT",
-    "services": [],
-    "minNodeVersion": "16.13.1",
-    "probotApps": []
   },
   "files": [
     "build/adonis-typings",
@@ -55,24 +56,13 @@
     "build/templates",
     "build/instructions.md"
   ],
-  "adonisjs": {
-    "instructionsMd": "./build/instructions.md",
-    "types": "apitoolkit-adonis",
-    "providers": [
-      "apitoolkit-adonis"
-    ],
-    "templates": {
-      "config": [
-        "apitoolkit.txt"
-      ]
-    }
-  },
   "dependencies": {
     "@google-cloud/pubsub": "^4.0.7",
     "@japa/assert": "^2.1.0",
     "@japa/runner": "^3.1.1",
     "@japa/spec-reporter": "^1.3.3",
     "@poppinss/dev-utils": "^2.0.3",
+    "@poppinss/utils": "^6.7.3",
     "apitoolkit-js": "^2.0.1",
     "async_hooks": "^1.0.0",
     "axios": "^1.6.2",
