--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "outDir": "./build",
     "strict": true,
     "experimentalDecorators": true,
-    "types": ["@adonisjs/core", "@japa/runner"]
+    "types": ["@adonisjs/core"]
   }
 }
