--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "build/src",
     "build/stubs",
     "build/index.d.ts",
-    "build/index.js"
+    "build/index.js",
+    "build/configure.d.ts",
+    "build/configure.js"
   ],
   "dependencies": {
     "@google-cloud/pubsub": "^4.0.7",
