--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "apitoolkit-adonis-six",
-  "version": "1.0.2",
+  "name": "apitoolkit-adonis",
+  "version": "3.0.0",
   "description": "APIToolkit SDK for adonisjs",
   "type": "module",
   "exports": {
